tests/baselines/reference/derivedClassOverridesPrivates.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPrivates.ts(5,7): error TS2415: Class 'Derived' incorrectly extends base class 'Base'.
  Types have separate declarations of a private property 'x'.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPrivates.ts(13,7): error TS2417: Class static side 'typeof Derived2' incorrectly extends base class static side 'typeof Base2'.
  Types have separate declarations of a private property 'y'.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPrivates.ts (2 errors) ====
    class Base {
        private x: { foo: string };
    }
    
    class Derived extends Base {
          ~~~~~~~
!!! error TS2415: Class '{|Derived|0|}' incorrectly extends base class '{|Base|1|}'.
!!! error TS2415:   Types have separate declarations of a private property 'x'.
!!! annotated symbol 0 tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPrivates.ts:5:7
!!! annotated symbol 1 tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPrivates.ts:1:7
        private x: { foo: string; bar: string; }; // error
    }
    
    class Base2 {
        private static y: { foo: string };
    }
    
    class Derived2 extends Base2 {
          ~~~~~~~~
!!! error TS2417: Class static side 'typeof {|Derived2|0|}' incorrectly extends base class static side 'typeof {|Base2|1|}'.
!!! error TS2417:   Types have separate declarations of a private property 'y'.
!!! annotated symbol 0 tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPrivates.ts:13:7
!!! annotated symbol 1 tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPrivates.ts:9:7
        private static y: { foo: string; bar: string; }; // error
    }